fix: text overflow in sync status table cell

--- a/src/components/TableV2/TableV2.css
+++ b/src/components/TableV2/TableV2.css
@@ -71,6 +71,9 @@
   .cell {
     display: inline-block;
     vertical-align: middle;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   [role='columnheader'].resizable {
